fix album overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,7 +19,7 @@ label.checkbox {
 
 .album-image {
   overflow: hidden;
-  max-width: 620px;
+  max-width: 580px;
   max-height: 400px;
   position: relative;
   margin-bottom: 5px;
